--- a/style.css
+++ b/style.css
@@ -5,6 +5,87 @@ body {
     color:#ffffff;
 }
 
+
+.content { font-family: "Nobile", "Lucida Grande", "Verdana", "Arial", "Helvetica", "Gill Sans", sans-serif; font-size: 90.89%;}
+
+.afs-nobile { font-family: "Nobile", "Lucida Grande", "Verdana", "Arial", "Helvetica", "Gill Sans", sans-serif; font-size: 90.89%;}
+
+
+@font-face {
+  font-family: Nobile;
+  src: url('/fonts/Nobile/nobile_bold-webfont.ttf');
+  src: local('☺'), url('/fonts/Nobile/nobile_bold-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_bold-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_bold-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 700;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: Nobile;
+  src: url('/fonts/Nobile/nobile_bold_italic-webfont.ttf');
+  src: local('☺'), url('/fonts/Nobile/nobile_bold_italic-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_bold_italic-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_bold_italic-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 700;
+  font-style: italic;
+}
+
+
+@font-face {
+  font-family: Nobile;
+  src: url('/fonts/Nobile/nobile-webfont.ttf');
+  src: local('☺'), url('/fonts/Nobile/nobile-webfont.woff') format('woff'), url('/fonts/Nobile/nobile-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: Nobile;
+  src: url('/fonts/Nobile/nobile_italic-webfont.ttf');
+  src: local('☺'), url('/fonts/Nobile/nobile_italic-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_italic-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_italic-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 400;
+  font-style: italic;
+}
+
+
+
+@font-face {
+  font-family: Nobile;
+  src: url('/fonts/Nobile/nobile_bold-webfont.ttf');
+  src: local('☺'), url('/fonts/Nobile/nobile_bold-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_bold-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_bold-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 700;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: Nobile;
+  src: url('/fonts/Nobile/nobile_bold_italic-webfont.ttf');
+  src: local('☺'), url('/fonts/Nobile/nobile_bold_italic-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_bold_italic-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_bold_italic-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 700;
+  font-style: italic;
+}
+
+
+@font-face {
+  font-family: Nobile;
+  src: url('/fonts/Nobile/nobile-webfont.ttf');
+  src: local('☺'), url('/fonts/Nobile/nobile-webfont.woff') format('woff'), url('/fonts/Nobile/nobile-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: Nobile;
+  src: url('/fonts/Nobile/nobile_italic-webfont.ttf');
+  src: local('☺'), url('/fonts/Nobile/nobile_italic-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_italic-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_italic-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 400;
+  font-style: italic;
+}
+
+
+
+
 div {
     /* generally want any div to be centered */
     margin-left:auto;
