--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ h2{
 	font-family: 'Lobster', arial, serif;
 	font-size: 3em;
 	text-shadow:2px 4px 3px #111111;
+	margin: 35px 0 15px 0px;
 }
 
 .banner_container {
