--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
 	list-style: none;
 }
 
+body {
+	background: #262626;
+}
+
 
 .content {
     font-family: "Nobile", "Lucida Grande", "Verdana", "Arial", "Helvetica", "Gill Sans", sans-serif;
@@ -94,13 +98,14 @@
 
 
 
-div {
+#wrapper {
     /* generally want any div to be centered */
-    margin-left:auto;
+    /*margin-left:auto;
     margin-right:auto;
     padding-left:100px;
-    padding-right:65px;
-    width:735px;
+    padding-right:65px;*/
+    width:900px;
+	margin: 0 auto;
     min-height:50px;
     clear:both;
 }
@@ -119,7 +124,7 @@ h3 {
 
 .banner_container {
     height:78px;
-    width:100%;
+    /*width:100%;*/
     padding:0 0 0 0;
     background:url('images/header_bg.png') repeat-x left top;
 }
@@ -127,13 +132,13 @@ h3 {
 .banner {
     padding:0 0 0 0;
     height:78px;
-    width:900px;
+    /*width:900px;*/
     background:url('images/header.png') no-repeat center top;
 }
 
 .lem_mit_bg {
     height:205px;
-    width:100%;
+    /*width:100%;*/
     padding:0 0 0 0;
     background:url('images/banner_bg.png') repeat-x left top;
 }
@@ -145,14 +150,14 @@ h3 {
 
 .splash_container {
     height:430px;
-    width:100%;
+    /*width:100%;*/
     padding:0 0 0 0;
     background:url('images/presentationBanner_bg.png') repeat-x left top;
 }
 
 .splash {
     height:430px;
-    width:850px;
+    /*width:850px;*/
     padding-left:50px;
     padding-right:0;
     background:url('images/presentationBanner.png') no-repeat center top;
@@ -160,7 +165,7 @@ h3 {
 
 .nav_container {
     height:60px;
-    width:100%;
+    /*width:100%;*/
     padding:0 0 0 0;
     background:url('images/toolbar_bg.png') repeat-x left top;
 }
@@ -168,7 +173,7 @@ h3 {
 .nav {
     padding-left:99px;
     padding-right:99px;
-    width:702px;
+    /*width:702px;*/
     height:60px;
     background:url('images/toolbar.png') no-repeat center top;
 }
@@ -179,6 +184,10 @@ h3 {
     padding:0 0 0 0;
     clear:none;
     float:left;
+}
+
+li{
+	margin-top: 10px;
 }
 
 .button {
@@ -215,14 +224,14 @@ h3 {
 	border-left: 2px solid #555;
 	padding: 0 0 0 10px;
 	margin: 5px;
-	color: #ccc;
+	color: #aaaaaa;
 }
 
 .section_desc {
 	font-size: 1.3em;
     margin:0 0 30px 0;
     padding:0 0 0 0;
-	color: #dddddd;
+	color: #aaaaaa;
 }
 
 .column {
