--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 
 
 .content {
-    font-family: "Nobile", "Lucida Grande", "Verdana", "Arial", "Helvetica", "Gill Sans", sans-serif;
+    font-family: "Fontin Sans", "Nobile", "Lucida Grande", "Verdana", "Arial", "Helvetica", "Gill Sans", sans-serif;
     font-size: 90.89%;
 }
 
@@ -24,42 +24,7 @@ body {
 }
 
 
-@font-face {
-  font-family: Nobile;
-  src: url('/fonts/Nobile/nobile_bold-webfont.ttf');
-  src: local('☺'), url('/fonts/Nobile/nobile_bold-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_bold-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_bold-webfont.svg#webfontX4pGz9fc') format('svg');
-  font-weight: 700;
-  font-style: normal;
-}
-
-
-@font-face {
-  font-family: Nobile;
-  src: url('/fonts/Nobile/nobile_bold_italic-webfont.ttf');
-  src: local('☺'), url('/fonts/Nobile/nobile_bold_italic-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_bold_italic-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_bold_italic-webfont.svg#webfontX4pGz9fc') format('svg');
-  font-weight: 700;
-  font-style: italic;
-}
-
-
-@font-face {
-  font-family: Nobile;
-  src: url('/fonts/Nobile/nobile-webfont.ttf');
-  src: local('☺'), url('/fonts/Nobile/nobile-webfont.woff') format('woff'), url('/fonts/Nobile/nobile-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile-webfont.svg#webfontX4pGz9fc') format('svg');
-  font-weight: 400;
-  font-style: normal;
-}
-
-
-@font-face {
-  font-family: Nobile;
-  src: url('/fonts/Nobile/nobile_italic-webfont.ttf');
-  src: local('☺'), url('/fonts/Nobile/nobile_italic-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_italic-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_italic-webfont.svg#webfontX4pGz9fc') format('svg');
-  font-weight: 400;
-  font-style: italic;
-}
-
-
+.afs-fontin-sans { font-family: "Fontin Sans", "Verdana", "Lucida Grande", "Arial", "Helvetica", "Gill Sans", sans-serif; font-size: 101.63%;}
 
 @font-face {
   font-family: Nobile;
@@ -97,6 +62,77 @@ body {
 }
 
 
+
+@font-face {
+  font-family: Nobile;
+  src: url('/fonts/Nobile/nobile_bold-webfont.ttf');
+  src: local('☺'), url('/fonts/Nobile/nobile_bold-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_bold-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_bold-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 700;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: Nobile;
+  src: url('/fonts/Nobile/nobile_bold_italic-webfont.ttf');
+  src: local('☺'), url('/fonts/Nobile/nobile_bold_italic-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_bold_italic-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_bold_italic-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 700;
+  font-style: italic;
+}
+
+
+@font-face {
+  font-family: Nobile;
+  src: url('/fonts/Nobile/nobile-webfont.ttf');
+  src: local('☺'), url('/fonts/Nobile/nobile-webfont.woff') format('woff'), url('/fonts/Nobile/nobile-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: Nobile;
+  src: url('/fonts/Nobile/nobile_italic-webfont.ttf');
+  src: local('☺'), url('/fonts/Nobile/nobile_italic-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_italic-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_italic-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 400;
+  font-style: italic;
+}
+
+
+@font-face {
+  font-family: Fontin Sans;
+  src: url('/fonts/Fontin-Sans/fontin_sans_b_45b-webfont.ttf');
+  src: local('☺'), url('/fonts/Fontin-Sans/fontin_sans_b_45b-webfont.woff') format('woff'), url('/fonts/Fontin-Sans/fontin_sans_b_45b-webfont.ttf') format('truetype'), url('/fonts/Fontin-Sans/fontin_sans_b_45b-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 700;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: Fontin Sans;
+  src: url('/fonts/Fontin-Sans/fontin_sans_i_45b-webfont.ttf');
+  src: local('☺'), url('/fonts/Fontin-Sans/fontin_sans_i_45b-webfont.woff') format('woff'), url('/fonts/Fontin-Sans/fontin_sans_i_45b-webfont.ttf') format('truetype'), url('/fonts/Fontin-Sans/fontin_sans_i_45b-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 400;
+  font-style: italic;
+}
+
+
+@font-face {
+  font-family: Fontin Sans;
+  src: url('/fonts/Fontin-Sans/fontin_sans_r_45b-webfont.ttf');
+  src: local('☺'), url('/fonts/Fontin-Sans/fontin_sans_r_45b-webfont.woff') format('woff'), url('/fonts/Fontin-Sans/fontin_sans_r_45b-webfont.ttf') format('truetype'), url('/fonts/Fontin-Sans/fontin_sans_r_45b-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: Fontin Sans;
+  src: url('/fonts/Fontin-Sans/fontin_sans_bi_45b-webfont.ttf');
+  src: local('☺'), url('/fonts/Fontin-Sans/fontin_sans_bi_45b-webfont.woff') format('woff'), url('/fonts/Fontin-Sans/fontin_sans_bi_45b-webfont.ttf') format('truetype'), url('/fonts/Fontin-Sans/fontin_sans_bi_45b-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 700;
+  font-style: italic;
+}
 
 
 #wrapper {
@@ -120,6 +156,7 @@ h2{
 
 h3 {
 	font-size: 1.3em;
+	text-shadow:1px 3px 3px #111111;
 	margin:16px 0 0 0;
 }
 
