--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,7 @@ h3 {
     width:100%;
     padding:0 0 0 0;
     background:url('../images/toolbar_bg.png') repeat-x left top;
+    z-index:1000;
 }
 
 .nav {
