--- a/css/style.css
+++ b/css/style.css
@@ -272,10 +272,14 @@ li{
 }
 
 .subtext{
+	
+	color: #aaaaaa;
+}
+
+li .subtext{
 	border-left: 2px solid #555;
 	padding: 0 0 0 10px;
 	margin: 5px;
-	color: #aaaaaa;
 }
 
 .section_desc {
@@ -304,6 +308,11 @@ div[name~='right_column'] h3{
     margin-top: 150px;
 }
 
+.tooltip{
+	font-size: 1.5em;
+	font-family: "Fontin Sans", "Nobile", "Lucida Grande", "Verdana", "Arial", "Helvetica", "Gill Sans", sans-serif;
+ 
+}
 
 .subsec_text {
     padding:0 0 0 0;
